crates/carta/tests/snapshots/golden_e2e__tsv__latex__basic.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}lll@{}}
\toprule\noalign{}
Name & Age & City \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
Alice & 30 & Berlin \\
Bob & 25 & Hamburg \\
\end{longtable}
}
