crates/carta/tests/snapshots/golden_e2e__tsv__latex__literal-quotes.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
note & detail \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
"quotes" stay literal & comma, stays too \\
\end{longtable}
}
