crates/carta/tests/snapshots/golden_e2e__tsv__latex__spaces.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
word & has spaces \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
foo bar & baz qux \\
\end{longtable}
}
